
name:               Fae
version:            0.5
cabal-version:      >= 1.2
author:             Hans Hoglund
maintainer:         Hans Hoglund
license:            BSD3
license-file:       COPYING
synopsis:           Bindings to the Functional Audio Engine
category:           Music
tested-with:        GHC
build-type:         Simple

description: 
    To be written.

library                    
    build-depends: 
        base >= 4 && < 5
    hs-source-dirs: src
    exposed-modules:
        Sound.Fae
    frameworks:
        FAE

executable "hsfae"
    build-depends: 
        base >= 4 && < 5
    hs-source-dirs: src
    frameworks:
        FAE
    main-is:
        Main.hs
