
name:               Faudio
version:            0.5
cabal-version:      >= 1.2
author:             Hans Hoglund
maintainer:         Hans Hoglund
license:            BSD3
license-file:       COPYING
synopsis:           Bindings to the Functional Audio Engine
category:           Music
tested-with:        GHC
build-type:         Simple

description: 
    To be written.

library                    
    build-depends: 
        base >= 4 && < 5
    hs-source-dirs: src
    default-extensions:
        ForeignFunctionInterface,
        EmptyDataDecls
    exposed-modules:
        Fa
        Fa.List
        Fa.String
        Fa.Fa
        Fa.Error
        Fa.Signal
        Fa.Audio
    frameworks:
        Faudio

executable "hsfae"
    build-depends: 
        base >= 4 && < 5
    hs-source-dirs: src
    default-extensions:
        ForeignFunctionInterface,
        EmptyDataDecls
    frameworks:
        Faudio
    main-is:
        Main.hs
